--- a/planetary-plasma/src/pages/index.astro
+++ b/planetary-plasma/src/pages/index.astro
@@ -1,5 +1,17 @@
 ---
-import Card from "../components/Card.astro";
+import RandomQuote from "../components/RandomQuote.svelte";
 ---
 
-<Card />
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Random Quote Generator</title>
+  </head>
+  <body>
+    <!-- This component is now interactive on the page!
+       The rest of your website remains static. -->
+    <RandomQuote client:load />
+  </body>
+</html>
